--- a/Casino Forms Project.csproj
+++ b/Casino Forms Project.csproj
@@ -77,6 +77,9 @@
     <Compile Include="BlackJackForm.MenuItems.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="BlackJackForm.GameResultConditions.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="BlackJackCardSelection.resx">
