--- a/Casino Forms Project.csproj
+++ b/Casino Forms Project.csproj
@@ -58,6 +58,12 @@
     <Compile Include="BlackJackTest.DealerCards.Designer.cs">
       <DependentUpon>BlackJackTest.DealerCards.cs</DependentUpon>
     </Compile>
+    <Compile Include="BlackJackTest.Information.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BlackJackTest.Information.Designer.cs">
+      <DependentUpon>BlackJackTest.Information.cs</DependentUpon>
+    </Compile>
     <Compile Include="BlackJackTest.PlayerCards.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +114,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="BlackJackTest.DealerCards.resx">
       <DependentUpon>BlackJackTest.DealerCards.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="BlackJackTest.Information.resx">
+      <DependentUpon>BlackJackTest.Information.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="BlackJackTest.PlayerCards.resx">
       <DependentUpon>BlackJackTest.PlayerCards.cs</DependentUpon>
