Implemented dealer, small, and big blind still no logic in anything

--- a/Casino Forms Project.csproj
+++ b/Casino Forms Project.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PkPlayable.cs" />
     <Compile Include="PokerForm.OpponetsSelect.cs">
       <SubType>Form</SubType>
     </Compile>
